--- a/Kleur.html
+++ b/Kleur.html
@@ -4,6 +4,7 @@
    <link rel="stylesheet" href=opmaak.css></link>
 <title>Kleurmoddelen</title>
    </head> 
+<body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
 <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
