--- a/Kleur.html
+++ b/Kleur.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html>
-   <head>
-   <link rel="stylesheet" href=opmaak.css></link>
-<title>Kleurmoddelen</title>
-   </head> 
+<head>
+    <meta charset="UTF-8" />
+    <title>Binair stelsel</title>
+</head>
 <body>
+<link rel="stylesheet" href=opmaak.css></link>
+<title>Kleurmoddelen</title>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
 <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
