--- a/Kleur.html
+++ b/Kleur.html
@@ -2,20 +2,21 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Binair stelsel</title>
+    <title>Kleurmoddelen/title>
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <title>Kleurmoddelen</title>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="page2.html">2e pagina</a>
-     <a href="game.html">Kleurmoddelen</a>
+     <a href="game.html">Binair stelsel</a>
+     <h1 align="center">Binair stelsel</h1>
     </body>
     </html>
     
