--- a/Kleur.html
+++ b/Kleur.html
@@ -1,14 +1,13 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Kleurmoddelen/title>
+    <title>Kleurmoddelen</title>
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
-<title>Kleurmoddelen</title>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -16,9 +15,9 @@
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="page2.html">2e pagina</a>
      <a href="game.html">Binair stelsel</a>
-    </div>
-    </div>
-     <h1 align="center">Binair stelsel</h1>
+   </div>
+ </div>
+ <h1 align="center">Kleurmoddelen</h1>
     </body>
     </html>
     
