--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
    <button class="dropbtn">meer</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
-     <a href="page2.html">2e pagina</a>
+     <a href="page2.html">Hobby's</a>
      <a href="Kleur.html">Kleurmoddelen</a>
    </div>
  </div>
