--- a/Kleur.html
+++ b/Kleur.html
@@ -13,7 +13,7 @@
    <button class="dropbtn">meer</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
-     <a href="page2.html">2e pagina</a>
+     <a href="page2.html">hobby's</a>
      <a href="game.html">Binair stelsel</a>
    </div>
  </div>
