--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
    </div>
  </div>
  <h1 align="center">Binair stelsel</h1>
- <h2 align="center">ASCII/h2>
+ <h2 align="center">ASCII></h2>
  <h3 align="center" style="color:grey;">Van deze 25 kunnen we ook een letter maken, dit doen we met ASCII (American Standard Code for Information Interchange). De standaard ASCII-tabel bestaat uit de 94 zichtbare tekens (hoofdletters en kleine letters, cijfers, leestekens en enkele andere symbolen), de spatie, en 33 stuurcodes. De stuurcodes representeren geen zichtbare tekens, maar zijn opdrachten aan uitvoerapparaten of geven informatie over de gegevens die verstuurd worden.</h3>
  <img src="binair.png" align="50%" alt="binair stelsel" style="width:700px;height:700px;">
    <!--Dit is een game die gaat over het Binair stelsel. -->
