--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -19,7 +19,7 @@
  </div>
  <h1 align="center">Binair stelsel</h1>
  <h3 align="center">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
- <img src="Binairstelsel.png" align="25%" alt="binair stelsel werking" style="width:600px;height:600px;">
+ <img src="Binairstelsel.png" align="center" alt="binair stelsel werking" style="width:700px;height:600px;">
  <h2 align="center">ASCII</h2>
  <h3 align="center" style="color:grey;">Van deze 25 kunnen we ook een letter maken, dit doen we met ASCII (American Standard Code for Information Interchange). De standaard ASCII-tabel bestaat uit de 94 zichtbare tekens (hoofdletters en kleine letters, cijfers, leestekens en enkele andere symbolen), de spatie, en 33 stuurcodes. De stuurcodes representeren geen zichtbare tekens, maar zijn opdrachten aan uitvoerapparaten of geven informatie over de gegevens die verstuurd worden.</h3>
  <img src="binair.png" align="50%" alt="binair stelsel" style="width:700px;height:700px;">
