--- a/Kleur.html
+++ b/Kleur.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -17,9 +17,10 @@
      <a href="game.html">Binair stelsel</a>
    </div>
  </div>
- <h1 align="center" padding: 30px; >Kleurmoddelen</h1>
- padding: 30px; 
- <h3 align="center" style="color:rgb(222, 21, 21);">Deze pagina is nog in onderhoud.</h3>
+ <div class="kleur rood">
+ <h1 align="center">Kleurmoddelen</h1>
+ </div>
+ <h3 align="center" style="color:grey;">Deze pagina is nog in onderhoud.</h3>
     </body>
     </html>
     
