--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
+<ul>
+   <li><a href="default.asp">Home</a></li>
+   <li><a href="news.asp">News</a></li>
+   <li><a href="contact.asp">Contact</a></li>
+   <li><a href="about.asp">About</a></li>
+ </ul>
 <div class="dropdown">
    <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
