--- a/Kleur.html
+++ b/Kleur.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -20,7 +20,9 @@
  <div class="kleurrood">
  <h1 align="center">Kleurmoddelen</h1>
  </div>
- <h3 align="center" style="color:grey;">Deze pagina is nog in onderhoud.</h3>
-    </body>
+ <div class="roodtekst1">
+ <h3 align="center" style="color:rgb(216, 9, 9);">Een manier om een kleur numeriek te beschrijven wordt een kleurmodel genoemd. Veel voorkomende kleurmodellen zijn RGB, HSV en CMYKc.</h3>
+</div>    
+</body>
     </html>
     
