--- a/Kleur.html
+++ b/Kleur.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -17,6 +17,28 @@
      <a href="game.html">Binair stelsel</a>
    </div>
  </div>
+ <style type="text/css">
+  .img_weg
+  {
+     float:right
+  }
+
+  .pos_right
+  {
+position: absolute;
+width: 70%;
+right: 25%;
+top: 50%;
+background-color: black;
+padding: 30px;
+  }
+  .pos_bottom
+  {
+     position: fixed;
+     bottom: 100%;
+  }
+</style>
+</style>
  <div class="kleurrood">
  <h1 align="center">Kleurmoddelen</h1>
  </div>
@@ -26,7 +48,7 @@
 <div class="roodtekst2">
   <h3 align="center" style="color:rgb(0, 0, 0);">Bij RGB is het zo dat de drie primaire kleuren rood, blauw en groen een additief kleursysteem vormen. Dit model wordt gebruikt om door het gebruik van een code kleuren vast te leggen. De kleuren rood, groen en blauw zijn de kleurcomponenten en zwart is de basiskleur.</h3>
  </div>    
- <img src="RGB.jpg" alt="RGB" style="width:300px;height:300px;">
+ <img class="img_weg src="RGB.jpg" alt="RGB" style="width:300px;height:300px;">
 </body>
     </html>
     
