--- a/Kleur.html
+++ b/Kleur.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -27,7 +27,8 @@
   {
 position: absolute;
 width: 70%;
-right: 25%;
+right: 50
+50%;
 top: 50%;
 background-color: black;
 padding: 30px;
