--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <title>Binair stelsel</title>
 </head>
 <body>
+
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
 <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
@@ -17,7 +18,8 @@
      <a href="Kleur.html">Kleurmoddelen</a>
    </div>
 </div>
- <h1 align="center">Binair stelsel</h1>
+<center> 
+ <h1>Binair stelsel</h1>
  <h3 align="center">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
  <img src="Binairstelsel.png" align="center" alt="binair stelsel werking" style="width:400px;height:200px;">
  <h2 align="center">ASCII</h2>
@@ -26,5 +28,6 @@
    <!--Dit is een game die gaat over het Binair stelsel. -->
 <iframe align="center" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
    </div>
+</center>
 </body>
 </html>
