--- a/Kleur.html
+++ b/Kleur.html
@@ -28,8 +28,10 @@
 </div>  
 <div class="roodtekst2">
   <h3 align="center" style="color:rgb(0, 0, 0);">Bij RGB is het zo dat de drie primaire kleuren rood, blauw en groen een additief kleursysteem vormen. Dit model wordt gebruikt om door het gebruik van een code kleuren vast te leggen. De kleuren rood, groen en blauw zijn de kleurcomponenten en zwart is de basiskleur.</h3>
- </div>    
+ </div>  
+ <center>  
  <img src="RGB.jpg" alt="RGB" style="width:300px;height:300px;">
+</center>
 </body>
     </html>
     
