--- a/index.html
+++ b/index.html
@@ -17,29 +17,16 @@
  </ul>
 <h1 align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij en kan je een game over het binair stelsel spelen!</h3>
- <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
-<style type="text/css">
-   .img_deg
-   {
-      float:right
-   }
+</style>
+</style>
+<div class="school">
 
-   .pos_right
-   {
-position: absolute;
-width: 70%;
-right: 25%;
-top: 50%;
-background-color: black;
-padding: 30px;
-   }
-   .pos_bottom
-   {
-      position: fixed;
-      bottom: 100%;
-   }
-</style>
-</style>
+<div class="school">
+   <h1>dit is mijn school</h1>
+   <br>
+</div>
+
+</div>
 <div class="pos_right">
 <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
