--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee style="color:grey;"> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <ul>
    <!--Dit is op de link naar de volgende pagina te kunnen zien aan de rechterkant.-->
