--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <ul>
-   <!--Dit is op de link naar de volgende pagina te kunnen zien aan de rechterkant.-->
+   <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
