--- a/page2.html
+++ b/page2.html
@@ -9,12 +9,12 @@
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
 <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<div class="dropdown">
-   <button class="dropbtn">meer</button>
-   <div class="dropdown-content">
-     <a href="https://sanj071.github.io">Hoofdpagina</a>
-     <a href="game.html">Binair stelsel</a>
-     <a href="Kleur.html">Kleurmoddelen</a>
+<ul>
+   <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
+   <li><a align="right" href="page2.html">Over mij</a></li>
+   <li><a align="right" href="game.html">Binair Stelsel</a></li>
+   <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
+ </ul>
    </div>
  </div>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
