--- a/game.html
+++ b/game.html
@@ -10,14 +10,12 @@
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
 <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<div class="dropdown">
-   <button class="dropbtn">meer</button>
-   <div class="dropdown-content">
-     <a href="https://sanj071.github.io">Hoofdpagina</a>
-     <a href="page2.html">Hobby's</a>
-     <a href="Kleur.html">Kleurmoddelen</a>
-   </div>
-</div>
+<ul>
+   <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
+   <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
+   <li><a align="right" href="page2.html">Over mij</a></li>
+   <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
+ </ul>
 <center> 
  <h1>Binair stelsel</h1>
  <h3 align="center">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
