--- a/Kleur.html
+++ b/Kleur.html
@@ -12,14 +12,12 @@
   <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
   <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
   <marquee direction="right" behaviour="scroll"></marquee>
-  <div class="dropdown">
-    <button class="dropbtn">meer</button>
-    <div class="dropdown-content">
-      <a href="https://sanj071.github.io">Hoofdpagina</a>
-      <a href="page2.html">Hobby's</a>
-      <a href="game.html">Binair stelsel</a>
-    </div>
-  </div>
+  <ul>
+    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
+    <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
+    <li><a align="right" href="page2.html">Over mij</a></li>
+    <li><a align="right" href="game.html">Kleurmoddelen</a></li>
+  </ul>
   <style type="text/css">
   </style>
   </style>
