--- a/game.html
+++ b/game.html
@@ -15,6 +15,9 @@
    <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
+   <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+     <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
 <center> 
  <h1>Binair stelsel</h1>
