--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <div class="school">
    <h1>dit is mijn school</h1>
+   <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
    <br>
 </div>
 
