--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
 <div class="school">
 
 <div class="school">
-   <h1>dit is mijn school</h1>
+   <h1 style="color: red;">dit is mijn school</h1>
    <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
    <br>
 </div>
 
 </div>
-<div class="pos_right">
-<img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
 <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
 <a style="color:  rgb(0, 51, 255);" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
