--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
  div class="school">
  <center>
  <div class="sport">
-    <h1 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+    <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
     <img class="img_deg" src="ramdas.jpeg" alt="school" style="width:300px;height:300px;">
     <br>
  </center>
