--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
@@ -34,7 +34,7 @@
 </div>
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
 <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
-<a style="color:  rgb(0, 51, 255);" href="hhttps://theprogrammerdr.github.io/">The programmerdr</a>
+<a style="color:  rgb(0, 51, 255);" href="https://theprogrammerdr.github.io/">The programmerdr</a>
 <a style="color:  rgb(0, 51, 255);" href="https://tctam.nl/">Tc_tam</a>
 <a style="color:  rgb(0, 51, 255);" href="https://tnobelen.github.io/">TNobelen</a>
 <a style="color: rgb(0, 51, 255);" href="https://th0mvn.github.io/">Th0mvnNobelen</a>
