--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title style="color: white;">Binair stelsel</title>
+    <title style="color: rgb(255, 0, 0);">Binair stelsel</title>
 </head>
 <body>
 
