--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
  <br>
@@ -27,5 +27,13 @@
  </center>
  </div>
  </div>
+ <div class="werk">
+   <center>
+   <div class="sport">
+      <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+      <img class="img_deg" src="ramdas.jpeg" alt="school" style="width:400px;height:300px;">
+   </center>
+   </div>
+   </div>
 </body>
 </html>
