--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <center>
 <div class="school">
    <h1 style="color: red;">dit is mijn school</h1>
-   <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
+  <a href="https://www.vlietlandcollege.nl/Home"> <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;"> </a>
    <br>
 </center>
 </div>
