--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
    <center>
    <div class="sport">
       <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
-      <img class="img_deg" src="ramdas.jpeg" alt="school" style="width:400px;height:300px;">
+      <img class="img_deg" src="Raja.jpg" alt="school" style="width:400px;height:300px;">
    </center>
    </div>
    </div>
