--- a/page2.html
+++ b/page2.html
@@ -29,9 +29,10 @@
  </div>
  <div class="werk">
    <center>
-   <div class="sport">
-      <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+   <div class="werk">
+      <h1 style="color: orange;">Ik werk in een kleine aziatische winkel genaamd Raja Cash and Carry. Ik werk hier sinds 2022. Ik werk hier niet per se voor het geld, maar om ervaring op te bouwen en ook om mijn eigen taal beter te begrijpen/leren.</h1>
       <img class="img_deg" src="Raja.jpg" alt="school" style="width:400px;height:300px;">
+      <h1 style="color: orange;">Aaltje Noordewierlaan 54, 2324 KT Leiden</h1>
    </center>
    </div>
    </div>
