--- a/vrienden.html
+++ b/vrienden.html
@@ -11,6 +11,7 @@
 <marquee direction="right" behaviour="scroll"></marquee>
 <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
+   <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
@@ -19,7 +20,7 @@
       <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
-<h1 align="center">SANJAY</h1>
+<h1 style="color: red;" align="center">Sites van vrienden</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij en kan je een game over het binair stelsel spelen!</h3>
 </style>
 </style>
