--- a/Kleur.html
+++ b/Kleur.html
@@ -16,6 +16,7 @@
     <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
     <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
     <li><a align="right" href="page2.html">Over mij</a></li>
+    <li><a align="right" href="vrienden.html">Vrienden</a></li>
     <li><a align="right" href="game.html">Binairstelsel</a></li>
     <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
     <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
