--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,7 @@
 <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
    <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
+   <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
