--- a/vrienden.html
+++ b/vrienden.html
@@ -17,8 +17,8 @@
       <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
-<h1 style="color: red;" align="center">Sites van vrienden</h1>
-<h3 align="center" style="color:grey;">Hier kun je sites van mijn vrienden zien met een uitleg vam wie ze zijn.</h3>
+<h1 style="color: red;">Sites van vrienden</h1>
+<h3 align="center" style="color:grey;">Hier kun je sites van mijn vrienden zien met een uitleg over wie ze zijn.</h3>
 </style>
 </style>
 <div class="school">
