--- a/vrienden.html
+++ b/vrienden.html
@@ -14,13 +14,15 @@
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
     </li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
 <br>
 <br>
+<center>
 <h1 style="color: red;">Sites van vrienden</h1>
 <h3 align="center" style="color:grey;">Hier kun je sites van mijn vrienden zien met een uitleg over wie ze zijn.</h3>
+</center>
 </style>
 </style>
 <div class="school">
