--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
    <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
    <li><a align="right" href="page2.html">Over mij</a></li>
+   <li><a align="right" href="hobby.html">hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
