--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
-     <marquee direction="right" behaviour="scroll"></marquee></li>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+     <marquee direction="right" behaviour="scroll"></marquee>
+   <br>
+   <br>
+   </li>
  </ul>
 <h1 style="color: red;" align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij.</h3>
